--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          <p align = "left"><b><font size="4">CHRIST RESURRECTED, PLANS WORLD TOUR W. DALI, DOKKEN</font></b>
           	<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="ZombieChrist.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
-				<p  align="justify"><font size="2">
+				<p  align="justify"><font size=2>
 				<a id="uniqueid" href="ChristTour.html">Considering his life and death resulted in thousands of years of hysteria and that his recent "resurrection" will surely produce more,
 				The most influential man in human history is surprisingly laid back and seems a bit bemused by the mania he inspires. <p>"Dude, Patti Smith never died for MY sins" cracks
    				</a></font>
@@ -48,7 +48,7 @@
          <p align = "left"><b><font size="4">Joke  Of The Day</font></b>
           	<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
           	<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">To smooth over her recent negative comments about his  presidency, Hillary Clinton said she and Barack Obama will "Hug-it-Out" next time they meet. Hearing  this, Bill Clinton said he also will "Hug-it-Out" with political rivals Megan Fox, Angelina Jolie, Sophia Vergara, Scarlett Johanson, and that hot waitress who works at The Olive Garden.
+				<p align="justify"><font size=2>To smooth over her recent negative comments about his  presidency, Hillary Clinton said she and Barack Obama will "Hug-it-Out" next time they meet. Hearing  this, Bill Clinton said he also will "Hug-it-Out" with political rivals Megan Fox, Angelina Jolie, Sophia Vergara, Scarlett Johanson, and that hot waitress who works at The Olive Garden.
 				</font><br>
 				<hr id='hrdotted' />
 			</div>
@@ -56,7 +56,7 @@
          <p align = "left"><b><font size="4">Photo Gallery</font></b>
           	<div style="width: 80px; float:left; margin:4; "><img src="Scenes1.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">
+				<p align="justify"><font size=2>
 				<a id="uniqueid" href="PhotoGallery.html">Here's some "behind the scenes" shit to keep your mind occupied.  Feel free to jerk off on some pics of Mack Dee and his buddies, including the incomparable Chris Nicolo.  View in wonderment the photos of Michelle Rae, Shannon Veedok and Andrew Valins doing nothing.
 				</a></font></p>
 				<hr id='hrdotted' />
@@ -69,7 +69,7 @@
 		<p align = "left"><b><font size="4"> Editorial </font></b>
 			<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">
+				<p align="justify"><font size=2>
 				<a id="uniqueid" href="20140901Editorial.html">Abbott had Costello. Penn has Teller. Mick - Keith. Jonny - Ed. Bonnie even had Clyde. Then how sad was this country's perceived state of affairs that a man with a record of extensive congressional service and unimaginable bravery and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for the most important office on earth?
 				</a></font><br>
 				<hr id='hrdotted' />
@@ -78,7 +78,7 @@
 		<p align = "left"><b><font size="4">MARCUS BACHMAN'S HETERO HOUSE: WHERE "GAY" IS A FOUR-LETTERED WORD</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">
+				<p align="justify"><font size=2>
 				<a id="uniqueid" href="20140901Feature.html">It's one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.<br>"Is your son a sissy? Has he gone down so much he has stretch marks on his forehead?  Is the only way
 				</a></font><br>
 				<hr id='hrdotted' />
@@ -88,7 +88,7 @@
 		<p align = "left"><b><font size="4">Synopsis</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="Synopsis.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">
+				<p align="justify"><font size=2>
 				<a id="uniqueid" href="Synopsis.html">As he approaches the threshold of middle age, Mackenzie Dylan looks like a guy who has it all. He's smart, funny and handsome. He's well respectedas a successful New York Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable - albeit neurotic - best friend. But Mack Dylan carries his share of baggage - a repressed
 				</a></font><br>
 				<hr id='hrdotted' />
@@ -97,10 +97,10 @@
 		<p align = "left"><b><font size="4">The Cast And Crew</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">
+				<p align="justify"><font size=2>
 				<a id="uniqueid" href="VinBio.html">Vincent Marino</a>
 				</font><br>
-				<p align="justify"><font size=2">
+				<p align="justify"><font size=2>
 				<a id="uniqueid" href="LupeBio.html">Michael Lupinacci</a>
 				</font><br>
 				<br>
@@ -114,7 +114,7 @@
 		<p align = "left"><b><font size="4">Origin</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="Origin.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">
+				<p align="justify"><font size=2>
 				<a id="uniqueid" href="Origin.html">The story of "The Mackenzie  Dylan Show" is essentially a story of friendship. I've known Co-Creator Vincent Marino for 33 years. It was from his "Creative Vagina" (zip locked in an air-tight placenta) that the amazing, original idea of a neurotic malcontent who must work out his family issues with an "imaginary" David Letterman-esque talk show sprang!
 				</a></font><br>
 				<hr id='hrdotted' />
