--- a/VinBio.html
+++ b/VinBio.html
@@ -36,7 +36,7 @@
 
 <p align = "left"><b><font size="5">Vincent Marino</font></b>
 <p>
-<img src="VinBio.jpg"></img>
+<img src="VinBio.jpg" width="200px"></img>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
 I co-wrote  & co-created 'The Mackenzie Dylan Show'.
