--- a/20140901Editorial.html
+++ b/20140901Editorial.html
@@ -34,7 +34,7 @@
 </table>
 <div style="width:1200; ">
 
-<p align = "left"><b><font size="5">Editorial</font></b>
+<p align = "left"><b><font size="5">Exclusive - The ACTUAL controversal Sarah Palin Column that got Macky D fired. From The New York Daily News Oct. 4, 2011:</font></b>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
 Abbott had Costello. Penn has Teller. Mick - Keith. Johnny - Ed. Bonnie even had Clyde. Then how sad was this country's perceived state of affairs that a man with a record of extensive congressional service and unimaginable bravery and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for the most important office on earth? She wasn't a comedic foil, a mute magician (would've been nice), an iconic rhythm guitarist, a jovial side-kick, or even a legendary criminal. They all compliment their partner by giving them better odds for success than not. But, the Presidency isn't Buffalo Bill's Wild West Show, and John McCain and Sarah "Ya Darn Tootin" Palin were soundly defeated in the 2008 election. Horrible economy; wars; handsome, charismatic black-man: a lot to overcome - I got it. But the pandering attempt to stimulate America's bassist gender-oriented nerve endings didn't work. Thanks and praise to the imaginary God of your choosing - we were safe. Done! We were through with that mind-numbing albeit libido stimulating Pimbo (figure it out). See ya on the Hunting Channel.
