--- a/ChristTour.html
+++ b/ChristTour.html
@@ -34,12 +34,14 @@
 </table>
 <div style="width:1200; ">
 
-<p align = "left"><b><font size="5">CHRIST RESURRECTED, PLANS WORLD TOUR W. DALI, DOKKEN</font></b>
+<p align = "left"><b><font size="5">CHRIST RESURRECTED, PLANS WORLD TOUR W. DALI LAMA, DOKKEN</font></b>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
 Considering his life and death resulted in thousands of years of hysteria and that his recent "resurrection" will surely produce more, the most influential man in human history is surprisingly laid back and seems a bit bemused by the mania he inspires.
 <p>
 "Dude, Patti Smith never died for MY sins" cracks the savior.  "I'm more popular than John Lennon and The Beatles now!" he chortles.
+<p>
+<img src="JesusGuest.jpg"></img>
 <p>
 The Christ return - he prefers to be addressed as "The Nazz" - co-ordinates with the just announced first leg of the massive "Monsters Of Peace" tour which also features The Dali Lama and the classic line-up of 80's Hair Metal Stalwarts DOKKEN. It's a massive trek invading mostly the cozier football stadiums and it begins Set. 9 at the Summer's Eve Disposable Douche Hoosier Dome in Indianapolis.
 <p>
@@ -50,6 +52,8 @@ Also due: Christ's first autobiography - the title of which will be revealed as 
 In conversation, The Nazz tends to move his hands while speaking as if he's conducting some invisible orchestra. He concedes that one motivation to return was the false representation of him, including unauthorized merchandise like the popular "Jesus...The First Zombie" t-shirt.
 <p>
 "We're looking to modernize the Catholic Church and improve marketing. For instance research shows that people HATE the taste of the communication Eucharist "They're dull. Have no flavor, they stick to the roof of my mouth.." Well starting in Oct. We're going to introduce a crispy baked wafer in four delicious flavors: Nacho, Sour Cream & Onion, Barbeque and Cool Ranch! They'll be marketed in Supermarkets as well. We're calling them "Jesus Christ, That's a Great Eucerist!"  With the tag line: "Eat Me!"
+<p>
+<img src="Jesus1.jpg"></img>
 <p>
 Christ concedes he wants to see more inclusion in the various denominations and becomes more animated when he declares:
 <p>
@@ -79,7 +83,7 @@ Cleveland,Oh.
 9/20 The Marcus Bachman Homosexual Reconditioning Center Twins Field
 Minneapolis, Mn.
 
-9/21 The Nipsey Russell Performing Arts Center
+9/21 The George (Goober) Lindsay Performing Arts Center
 St. Louis,Mo.
 
 9/23 The Bozo Theatre in The Round
