--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <div style="width:1200; ">
 
 	<div align="justify" style="width: 390px; float:left; margin:4; ">
-         <p align = "left"><b><font size="4">CHRIST RESURRECTED, PLANS WORLD TOUR W. DALI, DOKKEN</font></b>
-          	<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="ZombieChrist.jpg" width="80px"></div>
+         <p align = "left"><b><font size="4">CHRIST RESURRECTED, PLANS WORLD TOUR W. DALI LAMA, DOKKEN</font></b>
+          	<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="LupeLoaves.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
 				<p  align="justify"><font size=2>
 				<a id="uniqueid" href="ChristTour.html">Considering his life and death resulted in thousands of years of hysteria and that his recent "resurrection" will surely produce more,
@@ -45,10 +45,10 @@
 				<hr id='hrdotted' />
    			</div>
 
-         <p align = "left"><b><font size="4">Joke  Of The Day</font></b>
-          	<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
+         <p align = "left"><b><font size="4">Monologue Joke  Of The Day</font></b>
+          	<div style="width: 80px; float:left; margin:4; "><img src="Monologue.jpg" width="80px" height="80px"></div>
           	<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2>To smooth over her recent negative comments about his  presidency, Hillary Clinton said she and Barack Obama will "Hug-it-Out" next time they meet. Hearing  this, Bill Clinton said he also will "Hug-it-Out" with political rivals Megan Fox, Angelina Jolie, Sophia Vergara, Scarlett Johanson, and that hot waitress who works at The Olive Garden.
+				<p align="justify"><font size=2><b>From Mac's Monolouge 8/23/2014:</b> "To smooth over her recent negative comments about his  presidency, Hillary Clinton said she and Barack Obama will "Hug-it-Out" next time they meet. Hearing  this, Bill Clinton said he also will "Hug-it-Out" with political rivals Megan Fox, Angelina Jolie, Sophia Vergara, Scarlett Johanson, and that hot waitress who works at The Olive Garden."
 				</font><br>
 				<hr id='hrdotted' />
 			</div>
@@ -66,11 +66,11 @@
     <div align="justify" style="width: 390px; float:left; margin:4; ">
 		<iframe src="http://player.vimeo.com/video/73292195" width="375"  height="180" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen>
 		</iframe>
-		<p align = "left"><b><font size="4"> Editorial </font></b>
+		<p align = "left"><b><font size="4">Exclusive - The ACTUAL controversal Sarah Palin Column that got Macky D fired</font></b>
 			<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
-				<a id="uniqueid" href="20140901Editorial.html">Abbott had Costello. Penn has Teller. Mick - Keith. Jonny - Ed. Bonnie even had Clyde. Then how sad was this country's perceived state of affairs that a man with a record of extensive congressional service and unimaginable bravery and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for the most important office on earth?
+				<a id="uniqueid" href="20140901Editorial.html">From The New York Daily News Oct. 4, 2011: <p>Abbott had Costello. Penn has Teller. Mick - Keith. Jonny - Ed. Bonnie even had Clyde. Then how sad was this country's perceived state of affairs that a man with a record of extensive congressional
 				</a></font><br>
 				<hr id='hrdotted' />
 			</div>
