--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			</div>
 
 		<p align = "left"><b><font size="4">The Cast And Crew</font></b>
-			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
+			<div style="width: 80px; float:left; margin:4; "><img src="CastCrew.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
 				<a id="uniqueid" href="VinBio.html">Vincent Marino</a>
