--- a/ChristTour.html
+++ b/ChristTour.html
@@ -53,7 +53,7 @@ In conversation, The Nazz tends to move his hands while speaking as if he's cond
 <p>
 "We're looking to modernize the Catholic Church and improve marketing. For instance research shows that people HATE the taste of the communication Eucharist "They're dull. Have no flavor, they stick to the roof of my mouth.." Well starting in Oct. We're going to introduce a crispy baked wafer in four delicious flavors: Nacho, Sour Cream & Onion, Barbeque and Cool Ranch! They'll be marketed in Supermarkets as well. We're calling them "Jesus Christ, That's a Great Eucerist!"  With the tag line: "Eat Me!"
 <p>
-<img src="Jesus1.jpg"></img>
+<img src="JesusMetal.jpg"></img>
 <p>
 Christ concedes he wants to see more inclusion in the various denominations and becomes more animated when he declares:
 <p>
