--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<div align="justify" style="width: 390px; float:left; margin:4; ">
          <p align = "left"><b><font size="4">CHRIST RESURRECTED, PLANS WORLD TOUR W. DALI LAMA, DOKKEN</font></b>
-          	<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="LupeLoaves.jpg" width="80px"></div>
+          	<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="JesusLoaves.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
 				<p  align="justify"><font size=2>
 				<a id="uniqueid" href="ChristTour.html">Considering his life and death resulted in thousands of years of hysteria and that his recent "resurrection" will surely produce more,
@@ -54,7 +54,7 @@
 			</div>
 
          <p align = "left"><b><font size="4">Photo Gallery</font></b>
-          	<div style="width: 80px; float:left; margin:4; "><img src="Scenes1.jpg" width="80px"></div>
+          	<div style="width: 80px; float:left; margin:4; "><img src="MackKaren.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
 				<a id="uniqueid" href="PhotoGallery.html">Here's some "behind the scenes" shit to keep your mind occupied.  Feel free to jerk off on some pics of Mack Dee and his buddies, including the incomparable Chris Nicolo.  View in wonderment the photos of Michelle Rae, Shannon Veedok and Andrew Valins doing nothing.
