--- a/ChristTour.html
+++ b/ChristTour.html
@@ -58,8 +58,17 @@ In conversation, The Nazz tends to move his hands while speaking as if he's cond
 Christ concedes he wants to see more inclusion in the various denominations and becomes more animated when he declares:
 <p>
 "This insane judgment of people has got to stop. I saw this pasty faced creep on the Demagogue News Network lambasting single parents with this superiority complex. Listen PAL, I have the most famous deadbeat Dad in history! You think I'm cuing up the theme from 'The Courtship Of Eddie's Father' ready to play catch with the old man? PUH-LEEZE!"
-<img src="ZombieChrist.jpg" width="400"></img>
-<font size="2" align="center">Picture of bootleg zombie t-shirt - popular since Christ's resurrection</font>
+<p>
+<table border=0 width=638>
+	<tr>
+		<td>
+		    <img src="ZombieChrist.jpg" width="638"></img>
+		</td>
+		<td>
+		    <font size="2" align="center">Picture of bootleg zombie t-shirt - popular since Christ's resurrection</font>
+		</td>
+	</tr>
+</table>
 <p>
 (The Monsters Of Peace has announced its first leg in the following 12 cities with more to come)
 <p>
