--- a/ChristTour.html
+++ b/ChristTour.html
@@ -66,8 +66,8 @@ Christ concedes he wants to see more inclusion in the various denominations and 
 		</td>
 	</tr>
 	<tr>
-		<td>
-		    <font size="2" align="center">Picture of bootleg zombie t-shirt - popular since Christ's resurrection</font>
+		<td align="center">
+		    <font size="2" >Picture of bootleg zombie t-shirt - popular since Christ's resurrection</font>
 		</td>
 	</tr>
 </table>
