--- a/20140901Feature.html
+++ b/20140901Feature.html
@@ -36,6 +36,8 @@
 
 <p align = "left"><b><font size="5">MARCUS BACHMAN'S HETERO HOUSE: WHERE "GAY" IS A FOUR-LETTERED WORD</font></b>
 </p>
+<p align = "left"><b><font size="2">By Vince Marino & Ted Pirro</font></b>
+</p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
 It’s one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.
 <p>
