--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
-				<a id="uniqueid" href="20140901Feature.html">It's one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.<br>"Is your son a sissy? Has he gone down so much he has stretch marks on his forehead?  Is the only way
+				<a id="uniqueid" href="20140901Feature.html">By Vince Marino & Ted Pirro<p>It's one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.
 				</a></font><br>
 				<hr id='hrdotted' />
 			</div>
@@ -94,32 +94,35 @@
 				<hr id='hrdotted' />
 			</div>
 
-		<p align = "left"><b><font size="4">The Cast And Crew</font></b>
-			<div style="width: 80px; float:left; margin:4; "><img src="CastCrew.jpg" width="80px" height="80px"></div>
-			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2>
-				<a id="uniqueid" href="VinBio.html">Vincent Marino</a>
-				</font><br>
-				<p align="justify"><font size=2>
-				<a id="uniqueid" href="LupeBio.html">Michael Lupinacci</a>
-				</font><br>
-				<br>
-				<br>
-   				<br>
-				<br>
-   				<br>
-				<hr id='hrdotted' />
-			</div>
-
 		<p align = "left"><b><font size="4">Origin</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="Origin.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
-				<a id="uniqueid" href="Origin.html">The story of "The Mackenzie  Dylan Show" is essentially a story of friendship. I've known Co-Creator Vincent Marino for 33 years. It was from his "Creative Vagina" (zip locked in an air-tight placenta) that the amazing, original idea of a neurotic malcontent who must work out his family issues with an "imaginary" David Letterman-esque talk show sprang!
+				<a id="uniqueid" href="Origin.html">By Ted Pirro<p>The story of "The Mackenzie  Dylan Show" is essentially a story of friendship. I've known Co-Creator Vincent Marino for 33 years. It was from his "Creative Vagina" (zip locked in an air-tight placenta) that the amazing, original idea of a neurotic malcontent who must work out his
 				</a></font><br>
 				<hr id='hrdotted' />
 			</div>
 
+		<p align = "left"><b><font size="4">Assorted Shit</font></b>
+			<div style="width: 80px; float:left; margin:4; "><img src="CastCrew.jpg" width="80px" height="80px"></div>
+			<div style="display: inline-block; width: 290px;>
+				<p align="justify"><font size=2>
+				<a id="uniqueid" href="VinBio.html">The Creators</a>
+				</font><br>
+				<p align="justify"><font size=2>
+				<a id="uniqueid" href="LupeBio.html">Cast & Crew</a>
+				</font><br>
+				<p align="justify"><font size=2>
+				<a id="uniqueid" href="PhotoGallery.html">Photo Gallery</a>
+				</font><br>
+				<p align="justify"><font size=2>
+				<a id="uniqueid" href="LupeBio.html">Video</a>
+				</font><br>
+				<p align="justify"><font size=2>
+				<a id="uniqueid" href="LupeBio.html">Macky D's Little Known Facts</a>
+				</font><br>
+				<hr id='hrdotted' />
+			</div>
 
 	</div>
 
