--- a/20140901Feature.html
+++ b/20140901Feature.html
@@ -47,11 +47,11 @@ Yes Folks..he's back the ironically light in the loafers, husband of failed GOP 
 <p>
 The man who once famously referred to gays as "Barbarians that need to be educated. That need to be disciplined!" has produced an infomercial that promises to turn "Butches into babes and gay men from GLEE-bound to Pussy Hound."
 <p>
-As our host, the "General" reminds us in a fore brooding tone "There isno greater abomination against God then Homosexuality? It will lead tonothing but internal damnation!" On cue are elliptical animated images of various queer stereotypes being tormented with a pitchfork by 'Ol Beezlebub himself.
+As our host, the "General" reminds us in a fore brooding tone "There is no greater abomination against God then Homosexuality? It will lead to nothing but internal damnation!" On cue are elliptical animated images of various queer stereotypes being tormented with a pitchfork by 'Ol Beezlebub himself.
 <p>
 The "General" promises that only the latest and most sophisticated techniques are employed at HETERO HOUSE. This includes intimidation-a male "patient" is berated by a doctor who screams "Filthy Faggot" at him while a lesbian is smacked around with a raw fish by a female councilor who intones "Do you like that fishy smell? HUH?"
 <p>
-Not surprisingly, the mind numbing conformity of military training is employed as well. The infomercial shows our "patients" in military gearprodded by our General into marching and barking such military cadences as "DO LIKE DAD...NOT LIKE SIS...LIFT THE SEAT BEFORE YOU PISS" or the much catchier "HETEROSEXUALS CAN'T BE BEAT..SO DON'T STICK YOUR MEAT IN MY SEAT"
+Not surprisingly, the mind numbing conformity of military training is employed as well. The infomercial shows our "patients" in military gear prodded by our General into marching and barking such military cadences as "DO LIKE DAD...NOT LIKE SIS...LIFT THE SEAT BEFORE YOU PISS" or the much catchier "HETEROSEXUALS CAN'T BE BEAT..SO DON'T STICK YOUR MEAT IN MY SEAT"
 <p>
 Still Bachman and his Patton-esque front man believe the best cure is to "Pray away the gay and offer patience and guidance".  No better example of patience was demonstrated, when a Hetero House "Drill instructor" barks to two of the "infected" members of the opposite sex.  To "Fuck like straight people!"
 <p>
@@ -64,6 +64,19 @@ In a eureka moment, the duo "get it" and reposition themselves, each aggressivel
 But Bachmann and his twisted acolytes maintain a sort of smug self satisfaction on their "success" rate, believing the proof of their heterosexual pudding are the testimonies from the happily "straightened" graduates. The video closes with two powerful testimonials-the first from an average "cured" housewife, a taller than average domestic servant who identifies herself as "Amanda Pepperidge".
 <p>
 "You may not believe this", intones the woman, "but just 4 years ago I was a full on lesbian. I was munching more carpet than dust mites! But once I committed myself to Dr. Bachmann's facility I prayed away the gay and today I'm the happily married proud mother of 2 twin girls!"
+<p>
+<table border=0 width=638>
+	<tr>
+		<td align="center">
+		    <img src="AmandaPepperidge.jpg"></img>
+		</td>
+	</tr>
+	<tr>
+		<td align="center">
+		    <font size="2" >Amanda Pepperidge, 41, claims Bachmann "cured" her of lesbianism</font>
+		</td>
+	</tr>
+</table>
 <p>
 As if to emphasis the domestic bliss, Mr. Pepperidge enters the scene to remind his love that an episode of Xena is starting on television.
 <p>
