--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<a id="uniqueid" href="VinBio.html">The Creators</a>
 				</font><br>
 				<p align="justify"><font size=2>
-				<a id="uniqueid" href="LupeBio.html">Cast & Crew</a>
+				<a id="uniqueid" href="CastCrew.html">Cast & Crew</a>
 				</font><br>
 				<p align="justify"><font size=2>
 				<a id="uniqueid" href="PhotoGallery.html">Photo Gallery</a>
@@ -119,7 +119,7 @@
 				<a id="uniqueid" href="LupeBio.html">Video</a>
 				</font><br>
 				<p align="justify"><font size=2>
-				<a id="uniqueid" href="LupeBio.html">Macky D's Little Known Facts</a>
+				<a id="uniqueid" href="MackyFacts.html">Macky D's Little Known Facts</a>
 				</font><br>
 				<hr id='hrdotted' />
 			</div>
