--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			</div>
 
 		<p align = "left"><b><font size="4">MARCUS BACHMAN'S HETERO HOUSE: WHERE "GAY" IS A FOUR-LETTERED WORD</font></b>
-			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
+			<div style="width: 80px; float:left; margin:4; "><img src="AmandaPepperidge.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
 				<a id="uniqueid" href="20140901Feature.html">By Vince Marino & Ted Pirro<p>It's one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.
