--- a/CastCrew.html
+++ b/CastCrew.html
@@ -41,7 +41,7 @@
 	<tr>
 		<td><img src="LupeBioPic.jpg" width="80px"></img>
 		</td>
-		<td width="220">Michael Lupinacci
+		<td width="220"><a href="LupeBio.html">Michael Lupinacci</a>
 		</td>
 		<td width="120">........
 		</td>
@@ -51,7 +51,7 @@
 	<tr>
 		<td><img src="ChrisBioPic.jpg" width="80px"></img>
 		</td>
-		<td width="220">Chris Nicolo
+		<td width="220"><a href="ChrisBio.html">Chris Nicolo</a>
 		</td>
 		<td width="120">........
 		</td>
