--- a/ChrisBio.html
+++ b/ChrisBio.html
@@ -36,7 +36,7 @@
 
 <p align = "left"><b><font size="5">Chris Nicolo</font></b>
 <p>
-<img src="ChrisBioPic.jpg"></img>
+<img src="ChrisBioPic.jpg" width="640px"></img>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
 Chris Nicolo is a drummer, composer, private drum instructor and music therapy teacher and in the case of The Mackenzie Dylan show an actor and third partner.
@@ -50,7 +50,7 @@ Chris Nicolo is a drummer, composer, private drum instructor and music therapy t
           So, as stated above, I am a musician. I spend most of my time freelancing as a drummer and have played in just about every musical situation imaginable including touring. I also compose commercial/cinematic music and write for myself when I feel the muse strike. I teach private drum and piano lessons and am active conducting music therapy sessions in the New York and surrounding areas.
 <p>
 <p>
-<font size="4"><a href="index.html">Return to the Home Page</a></font>
+<font size="4"><a href="CastCrew.html">Return to the Cast & Crew Page</a></font>
 </div>
 
 </div>
