--- a/LupeBio.html
+++ b/LupeBio.html
@@ -36,7 +36,7 @@
 
 <p align = "left"><b><font size="5">Michael Lupinacci</font></b>
 <p>
-<img src="LupeBioPic.jpg"></img>
+<img src="LupeBioPic.jpg" width="640px"></img>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
 Michael Lupinacci is not an actor . In fact he's the only non-professional actor in "The Mackenzie Dylan Show" cast. However he was the first and only choice for the role he was born to play -Jesus Christ, the first guest on Mackenzie's imaginary talk show. (Also when I asked him to do it he replied "Sure, I already have the costume on the back seat of my car"-Really, I can't make this shit up!)
@@ -50,7 +50,7 @@ Michael Lupinacci is not an actor . In fact he's the only non-professional actor
   He came on the talk show set with boundless enthusiasm-even suggesting some bits and reshaping some dialogue.  The idea of coming on Mac's set throwing loaves and fishes to the audience was his and it worked. It was funny! In fact we took him out of his comfort zone and he delivered a definitive performance showcasing the range of emotion that I needed him to give!...and his Jesus is waaaaay less whiney than that pussy Jim Caviezel.
 <p>
 <p>
-<font size="4"><a href="index.html">Return to the Home Page</a></font>
+<font size="4"><a href="CastCrew.html">Return to the Cast & Crew Page</a></font>
 </div>
 
 </div>
