--- a/VinBio.html
+++ b/VinBio.html
@@ -39,13 +39,9 @@
 <img src="VinBio.jpg" width="200px"></img>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
-I co-wrote  & co-created 'The Mackenzie Dylan Show'.
+I am co-writer & co-creator of the "The Mackenzie Dylan Show". Writing is special to me cause it is the ultimate "hybrid" activity: it brings me joy while allowing me to sit on my lazy ass. When the words and ideas are flowing freely its an experience like nothing else. My writing inspirations are Neil Peart, Robert Altman, Quentin Tarantino, Patti Smith and anyone ever staffed on, "The Larry Sanders Show". I've written several screenplays, dozens of poems (All For Sale..Call, uh, Text Me) and the hilarious yet topical monologue jokes for "The Mackenzie Dylan Show". I will write till the day I die.
 <p>
-Writing is special for it brings me joy, is the one activity  not involving a repetitive hand motion where I possess some level of talent, and I can do it sitting on  my lazy ass.
-<p>
-My writing inspirations are Neil Peart, Robert Altman, and anyone ever staffed on, 'The  Larry Sanders Show'.
-<p>
-Pizza is yummy and Patti Smith transcends cool - Bye
+Ted & I have exchanged creative ideas since high school. Ted appeared in plays, read extensively about entertainment, and danced to Van Halen music with a whimsy rarely displayed by heterosexual men. I sat like inert gas in front of my black & white T.V. Yet somehow the desire to write surfaced, and I indulged. A satire I wrote about a mutual friend got positive feedback from my peeps, and I was hooked. When Ted came to me about expanding my one-act-play "Release" into a web-series, I hadn't written anything in eight years. His expansive vision of an idea I had forgotten about has taken us and newest "Mackyd Partner" Chris Nicolo, on an exciting trip that we all hope is just beginning. Lastly, I like long walks in heavy traffic & Pokeno.
 <p>
 <p>
 <font size="4"><a href="index.html">Return to the Home Page</a></font>
