--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<div style="width: 80px; float:left; margin:4; "><img src="CastCrew.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
-				<a id="uniqueid" href="VinBio.html">The Creators</a>
+				<a id="uniqueid" href="TheCreators.html">The Creators</a>
 				</font><br>
 				<p align="justify"><font size=2>
 				<a id="uniqueid" href="CastCrew.html">Cast & Crew</a>
@@ -116,7 +116,7 @@
 				<a id="uniqueid" href="PhotoGallery.html">Photo Gallery</a>
 				</font><br>
 				<p align="justify"><font size=2>
-				<a id="uniqueid" href="LupeBio.html">Video</a>
+				<a id="uniqueid" href="PhotoGallery.html">Video</a>
 				</font><br>
 				<p align="justify"><font size=2>
 				<a id="uniqueid" href="MackyFacts.html">Macky D's Little Known Facts</a>
