--- a/Synopsis.html
+++ b/Synopsis.html
@@ -66,7 +66,7 @@
 <p>
  <b>Episode 1: UNEMPLOYED JESUS</b>
 <p>
- Mack Dylan is in hot water. One of his columns criticizing the religious right and the inadequacy of religion has caused a fire storm-boycotts havebeen threatened causing  our atheist inclined hero to stress. A Dinner with his catholic inclined best friend Jim triggers a philosophical discussion thatgets his pal heated. Mack "retreats" into his fantasy world and his "inner" talk show where his first guest is none other than Jesus Christ. Christ proves to be an open and revealing interview and displays a real good sense of humor as well.
+ Mack Dylan is in hot water. One of his columns criticizing the religious right and the inadequacy of religion has caused a fire storm - boycotts have been threatened causing our atheist inclined hero to stress. A Dinner with his Catholic inclined best friend Jim triggers a philosophical discussion that gets his pal heated. Mack "retreats" into his fantasy world and his "inner" talk show where his first guest is none other than Jesus Christ. Christ proves to be an open and revealing interview and displays a real good sense of humor as well.
 <p>
 <!--
  <b>Episode 2: ASSHOLE</b>
