--- a/CastCrew.html
+++ b/CastCrew.html
@@ -58,6 +58,16 @@
 		<td>Doorman / Chris Nicolo
 		</td>
 	</tr>
+	<tr>
+		<td><img src="FrankBioPic.jpg" width="80px"></img>
+		</td>
+		<td width="220"><a href="FrankBio.html">Frank Nicolo</a>
+		</td>
+		<td width="120">........
+		</td>
+		<td>Henry Cooper
+		</td>
+	</tr>
 </table>
 <p>
 <p>
