--- a/index.html
+++ b/index.html
@@ -56,12 +56,9 @@
          <p align = "left"><b><font size="4">Public Service Announcement</font></b>
           	<div style="width: 80px; float:left; margin:4; "><img src="Chokehold.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2>In an effort to erase mounting tension and suspicion within the police and The African-Americans, police officers are giving FREE Heimlich maneuver demonstrations in the Black communities.<br>
-   Apparently, choking related deaths have increased in African-American males in the past year-it is now third behind high blood pressure and hypertension. Happily, the 4th and 5th causes-the Ebola virus and getting a plunger shoved up your ass-have steadily decreased in the past 12 months!<br>
-   Here Officer David Donato demonstrates the proper way to use the Heimlich on Rufus McKeaton of Staten Island.<br>
-   In a related story, Mr. Mckeaton died choking to death. According to Officer Donato:<br>
-"The Poor guy must have had a large piece of watermelon or fried chicken lodged in his gullet. Even the Heimlich couldn’t save him."
-				</font></p>
+				<p align="justify"><font size=2>
+				<a id="uniqueid" href="PSA.html">In an effort to erase mounting tension and suspicion within the police and The African-Americans, police officers are giving FREE Heimlich maneuver demonstrations in the Black communities.
+				</a></font></p>
 				<hr id='hrdotted' />
 		  	</div>
 
