--- a/MichelleBio.html
+++ b/MichelleBio.html
@@ -34,54 +34,17 @@
 </table>
 <div style="width:1200; ">
 
-<p align = "left"><b><font size="5">Cast & Crew</font></b>
+<p align = "left"><b><font size="5">Michelle Rae</font></b>
 <p>
+<img src="MichelleBioPic.jpg" width="640px"></img>
+</p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
-<table>
-	<tr>
-		<td><img src="LupeBioPic.jpg" width="80px"></img>
-		</td>
-		<td width="220"><a href="LupeBio.html">Michael Lupinacci</a>
-		</td>
-		<td width="120">........
-		</td>
-		<td>Jesus
-		</td>
-	</tr>
-	<tr>
-		<td><img src="MichelleBioPicS.jpg" width="80px"></img>
-		</td>
-		<td width="220"><a href="MichelleBio.html">Michelle Rae</a>
-		</td>
-		<td width="120">........
-		</td>
-		<td>Karen Mancini
-		</td>
-	</tr>
-	<tr>
-		<td><img src="ChrisBioPic.jpg" width="80px"></img>
-		</td>
-		<td width="220"><a href="ChrisBio.html">Chris Nicolo</a>
-		</td>
-		<td width="120">........
-		</td>
-		<td>Doorman / Chris Nicolo
-		</td>
-	</tr>
-	<tr>
-		<td><img src="FrankBioPic.jpg" width="80px"></img>
-		</td>
-		<td width="220"><a href="FrankBio.html">Frank Nicolo</a>
-		</td>
-		<td width="120">........
-		</td>
-		<td>Henry Cooper
-		</td>
-	</tr>
-</table>
+Actress Michelle Rae plays the role of Karen in the Mackenzie Dylan Show. Michelle has been a working actor for about five years. She worksin Commercials, National Infomercials, Industrials, Film & Television, Web Series, Voiceover and Theater. She was filmed work for: ESPN, Victorinox Swiss Army, Mohegan Sun Casino, Lindsey Limousine, Silly Slippeez and many more.  She follows her passion of acting with enthusiasm and true professionalism.  Michelle is an advocate for feeding our hungry and homeless community as well as supports The American Red Cross.
+<p>
+"Imagination is the streetlight that will guide you to your next destination." ~ Michelle Rae
 <p>
 <p>
-<font size="4"><a href="index.html">Return to the Home Page</a></font>
+<font size="4"><a href="CastCrew.html">Return to the Cast & Crew Page</a></font>
 </div>
 
 </div>
