--- a/MichelleBio.html
+++ b/MichelleBio.html
@@ -39,7 +39,7 @@
 <img src="MichelleBioPic.jpg" width="640px"></img>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
-Actress Michelle Rae plays the role of Karen in the Mackenzie Dylan Show. Michelle has been a working actor for about five years. She worksin Commercials, National Infomercials, Industrials, Film & Television, Web Series, Voiceover and Theater. She was filmed work for: ESPN, Victorinox Swiss Army, Mohegan Sun Casino, Lindsey Limousine, Silly Slippeez and many more.  She follows her passion of acting with enthusiasm and true professionalism.  Michelle is an advocate for feeding our hungry and homeless community as well as supports The American Red Cross.
+Actress Michelle Rae plays the role of Karen in the Mackenzie Dylan Show. Michelle has been a working actor for about five years. She works in Commercials, National Infomercials, Industrials, Film & Television, Web Series, Voiceover and Theater. She has filmed work for: ESPN, Victorinox Swiss Army, Mohegan Sun Casino, Lindsey Limousine, Silly Slippeez and many more.  She follows her passion of acting with enthusiasm and true professionalism.  Michelle is an advocate for feeding our hungry and homeless community and also supports The American Red Cross.
 <p>
 "Imagination is the streetlight that will guide you to your next destination." ~ Michelle Rae
 <p>
