--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div style="width:1200; ">
 
 	<div align="justify" style="width: 390px; float:left; margin:4; ">
-         <p align = "left"><b><font size="4">CHRIST RESURRECTED, PLANS WORLD TOUR W. DALI LAMA, DOKKEN</font></b>
+         <p align = "left"><b><font size="4">Christ resurrected, palns World tour w/Dali Lama, Dokken</font></b>
           	<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="JesusLoaves.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
 				<p  align="justify"><font size=2>
@@ -75,8 +75,8 @@
 				<hr id='hrdotted' />
 			</div>
 
-		<p align = "left"><b><font size="4">MARCUS BACHMAN'S HETERO HOUSE: WHERE "GAY" IS A FOUR-LETTERED WORD</font></b>
-			<div style="width: 80px; float:left; margin:4; "><img src="AmandaPepperidge.jpg" width="80px" height="80px"></div>
+		<p align = "left"><b><font size="4">Marcus Bachmann's Hetero House: Where "Gay" is a four-lettered word</font></b>
+			<div style="width: 80px; float:left; margin:4; "><img src="DrBachmann.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
 				<a id="uniqueid" href="20140901Feature.html">By Vince Marino & Ted Pirro<p>It's one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.
