--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div style="width:1200; ">
 
 	<div align="justify" style="width: 390px; float:left; margin:4; ">
-         <p align = "left"><b><font size="4">Christ resurrected, palns World tour w/Dali Lama, Dokken</font></b>
+         <p align = "left"><b><font size="4">Christ resurrected, plans World tour w/Dali Lama, Dokken</font></b>
           	<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="JesusLoaves.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
 				<p  align="justify"><font size=2>
@@ -66,7 +66,7 @@
     <div align="justify" style="width: 390px; float:left; margin:4; ">
 		<iframe src="http://player.vimeo.com/video/73292195" width="375"  height="180" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen>
 		</iframe>
-		<p align = "left"><b><font size="4">Exclusive - The ACTUAL controversal Sarah Palin Column that got Macky D fired</font></b>
+		<p align = "left"><b><font size="4">Exclusive - The ACTUAL controversal Sarah Palin column that got Macky D fired</font></b>
 			<div style="width: 80px; float:left; margin:4; overflow:hidden; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2>
