--- a/TestFile.html
+++ b/TestFile.html
@@ -17,5 +17,37 @@
             </td>
         </tr>
      </table>
+     <p>
+     <div style="width: 310px">
+		<table id="tblIncidentQueue2" class="DataTable" width="300">
+        	<tr class="TableHeaderFooter">
+            	<td colspan="5">
+                	<strong>Show </strong>
+
+                	<strong> entries</strong>
+            	</td>
+            	<td align="right">
+                	<img src="ChrisBusking.jpg" width="140px" border="0" />
+                	<img src="FredFlipoff.jpg" width="140px" border="0" />
+            	</td>
+        	</tr>
+     	</table>
+     </div>
+     <div style="width: 310px; vertical-align: top; margin-left: 320px;">
+		<table id="tblIncidentQueue2" class="DataTable" width="300">
+        	<tr class="TableHeaderFooter">
+            	<td colspan="5">
+                	<strong>Show </strong>
+
+                	<strong> entries</strong>
+            	</td>
+            	<td align="right">
+                	<img src="ChrisBusking.jpg" width="140px" border="0" />
+                	<img src="FredFlipoff.jpg" width="140px" border="0" />
+            	</td>
+        	</tr>
+     	</table>
+    </div >
+
 </body>
 </html>
