--- a/TestFile.html
+++ b/TestFile.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-<table id="tblIncidentQueue" class="DataTable">
+<table id="tblIncidentQueue" class="DataTable" width="710">
         <tr class="TableHeaderFooter">
             <td colspan="5">
                 <strong>Show </strong>
@@ -17,9 +17,9 @@
             </td>
         </tr>
      </table>
-     <p>
-     <div style="width: 310px">
-		<table id="tblIncidentQueue2" class="DataTable" width="300">
+
+     <div style="width: 345px; float: left;">
+		<table id="tblIncidentQueue2" class="DataTable" width="345">
         	<tr class="TableHeaderFooter">
             	<td colspan="5">
                 	<strong>Show </strong>
@@ -33,8 +33,8 @@
         	</tr>
      	</table>
      </div>
-     <div style="width: 310px; vertical-align: top; margin-left: 330px;">
-		<table id="tblIncidentQueue2" class="DataTable" width="300">
+     <div style="width: 345px; vertical-align: top; margin-left: 20px; float: left;">
+		<table id="tblIncidentQueue2" class="DataTable" width="345">
         	<tr class="TableHeaderFooter">
             	<td colspan="5">
                 	<strong>Show </strong>
